@@ -166,6 +166,26 @@ name|Objects
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
 begin_comment
 comment|/**  * Wraps any {@link MultiTermQuery} as a {@link SpanQuery},   * so it can be nested within other SpanQuery classes.  *<p>  * The query is rewritten by default to a {@link SpanOrQuery} containing  * the expanded terms, but this can be customized.   *<p>  * Example:  *<blockquote><pre class="prettyprint">  * {@code  * WildcardQuery wildcard = new WildcardQuery(new Term("field", "bro?n"));  * SpanQuery spanWildcard = new SpanMultiTermQueryWrapper<WildcardQuery>(wildcard);  * // do something with spanWildcard, such as use it in a SpanFirstQuery  * }  *</pre></blockquote>  */
 end_comment
@@ -615,27 +635,39 @@ specifier|private
 specifier|final
 name|ScoringRewrite
 argument_list|<
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 argument_list|>
 name|delegate
 init|=
 operator|new
 name|ScoringRewrite
 argument_list|<
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 argument_list|>
 argument_list|()
 block|{
 annotation|@
 name|Override
 specifier|protected
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 name|getTopLevelBuilder
 parameter_list|()
 block|{
 return|return
 operator|new
-name|SpanOrQuery
+name|ArrayList
+argument_list|<
+name|SpanQuery
+argument_list|>
 argument_list|()
 return|;
 block|}
@@ -643,12 +675,31 @@ specifier|protected
 name|Query
 name|build
 parameter_list|(
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 name|builder
 parameter_list|)
 block|{
 return|return
+operator|new
+name|SpanOrQuery
+argument_list|(
 name|builder
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|SpanQuery
+index|[
+name|builder
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+argument_list|)
 return|;
 block|}
 annotation|@
@@ -669,7 +720,10 @@ specifier|protected
 name|void
 name|addClause
 parameter_list|(
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 name|topLevel
 parameter_list|,
 name|Term
@@ -699,7 +753,7 @@ argument_list|)
 decl_stmt|;
 name|topLevel
 operator|.
-name|addClause
+name|add
 argument_list|(
 name|q
 argument_list|)
@@ -753,7 +807,10 @@ specifier|private
 specifier|final
 name|TopTermsRewrite
 argument_list|<
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 argument_list|>
 name|delegate
 decl_stmt|;
@@ -771,7 +828,10 @@ operator|=
 operator|new
 name|TopTermsRewrite
 argument_list|<
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 argument_list|>
 argument_list|(
 name|size
@@ -793,13 +853,19 @@ block|}
 annotation|@
 name|Override
 specifier|protected
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 name|getTopLevelBuilder
 parameter_list|()
 block|{
 return|return
 operator|new
-name|SpanOrQuery
+name|ArrayList
+argument_list|<
+name|SpanQuery
+argument_list|>
 argument_list|()
 return|;
 block|}
@@ -809,12 +875,31 @@ specifier|protected
 name|Query
 name|build
 parameter_list|(
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 name|builder
 parameter_list|)
 block|{
 return|return
+operator|new
+name|SpanOrQuery
+argument_list|(
 name|builder
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|SpanQuery
+index|[
+name|builder
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+argument_list|)
 return|;
 block|}
 annotation|@
@@ -823,7 +908,10 @@ specifier|protected
 name|void
 name|addClause
 parameter_list|(
-name|SpanOrQuery
+name|List
+argument_list|<
+name|SpanQuery
+argument_list|>
 name|topLevel
 parameter_list|,
 name|Term
@@ -853,7 +941,7 @@ argument_list|)
 decl_stmt|;
 name|topLevel
 operator|.
-name|addClause
+name|add
 argument_list|(
 name|q
 argument_list|)
